# morse-writer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  design.txt  main.cpp  todo.txt
configuration/: CMakeLists.txt
configuration/headers/: MorseWriterConfiguration.h
configuration/implementation/: MorseWriterConfiguration.cpp
docs/: architecture.asta
src/: CMakeLists.txt  main.cpp  morse-player.cpp  player.cpp
src/libmorse/: CMakeLists.txt
src/libmorse/headers/: AudioSettings.h  MorseCodeSpeed.h  MorseDataSource.h  MorseDictionary.h  MorseElement.h  MorseEvents.h  MorsePlayer.h  MorseWriter.h  MorseWriterConfiguration.h  Oscillator.h  WavWriter.h
src/libmorse/implementation/: MorseCodeSpeed.cpp  MorseDataSource.cpp  MorseDictionary.cpp  MorseEventDelayer.cpp  MorsePlayer.cpp  MorseRenderer.cpp  MorseWriter.cpp  Oscillator.cpp
src/utils/: CMakeLists.txt
src/utils/headers/: Utils.h
src/writer/: CMakeLists.txt
src/writer/headers/: AudioSettings.h  MorseCodeSpeed.h  MorseCodeStyle.h  MorseDataSource.h  MorseDictionary.h  MorseElement.h  MorseEvent.h  MorseEventDelayer.h  MorseEvents.h  MorseRenderer.h  MorseWriter.h  MorseWriterConfiguration.h
src/writer/implementation/: MorseCodeSpeed.cpp  MorseDataSource.cpp  MorseDictionary.cpp  MorseRenderer.cpp  MorseWriter.cpp  MorseWriterConfiguration.cpp  Oscillator.cpp  WavWriter.cpp
tests/: CMakeLists.txt  main.cpp
tests/UnitTest++/: CMakeLists.txt
tests/src/: MorseCodeSpeedTest.cpp  MorseConfigurationTest.cpp  MorseDataSourceTest.cpp
writer/: CMakeLists.txt
writer/headers/: MorseWriter.h
writer/implementation/: MorseWriter.cpp
